--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    permission: write-all
+    permissions: write-all
 
     steps:
     - uses: actions/checkout@v3
