--- a/.github/workflows/slack_notify.yml
+++ b/.github/workflows/slack_notify.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Send Slack notification
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
         run: |
           curl -X POST -H 'Content-type: application/json' \
           --data '{
