--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,3 +34,16 @@ jobs:
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+  notify:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Send Slack notification
+        env:
+          SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data '{
+            "text": "Workflow ${{ github.workflow }} in repo ${{ github.repository }} has status ${{ job.status }}.",
+            "channel": "#deployment"
+          }' $SLACK_WEBHOOK_URL
