--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 			<version>2.3.1</version>
 		</dependency>
 
+		<!-- Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
 
 	</dependencies>
 
