--- a/src/main/resources/db/changelog/002-user-table.yml
+++ b/src/main/resources/db/changelog/002-user-table.yml
@@ -12,6 +12,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_user
               - column:
                   name: name
                   type: varchar(255)
