--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -2,4 +2,5 @@ databaseChangeLog:
   - include:
       file: classpath:/db/changelog/001-initial-schema.yml
       file: classpath:/db/changelog/002-user-table.yml
+      file: classpath:/db/changelog/003-token-table.yml
   # Add more include statements for additional changelog files if needed
