--- a/src/main/resources/db/changelog/001-country.yml
+++ b/src/main/resources/db/changelog/001-country.yml
@@ -38,13 +38,15 @@ databaseChangeLog:
               - column:
                   name: created_date
                   type: datetime
-                  defaultValueComputed: 'CURRENT_TIMESTAMP'
+                  defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
               - column:
                   name: modified_user
                   type: varchar(255)
               - column:
                   name: modified_date
-                  type: datetime
+                  type: timestamp
               - column:
                   name: version
                   type: int
