--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -1,5 +1,8 @@
 databaseChangeLog:
   - include:
       file: classpath:/db/changelog/001_country.yml
+  - include:
       file: classpath:/db/changelog/002_contact_method.yml
+  - include:
+      file: classpath:/db/changelog/003_institution.yml
   # Add more include statements for additional changelog files if needed
