--- a/src/main/resources/db/changelog/002_contact_method.yml
+++ b/src/main/resources/db/changelog/002_contact_method.yml
@@ -13,12 +13,14 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
+                    primaryKeyName: pk_contact_method
               - column:
                   name: code
                   type: varchar(10)
                   constraints:
                     nullable: false
                     unique: true
+                    uniqueConstraintName: uk_contact_method
               - column:
                   name: description
                   type: varchar(100)
