--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -15,3 +15,5 @@ databaseChangeLog:
       file: classpath:/db/changelog/007_transaction_type.yml
   - include:
       file: classpath:/db/changelog/008_title.yml
+  - include:
+      file: classpath:/db/changelog/009_user_profile.yml
