User, Roles and User Roles Changes
Signed-off-by: Chinthaka Manathunga <Chinthaka.Manathunga@lseg.com>

--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -17,3 +17,9 @@ databaseChangeLog:
       file: classpath:/db/changelog/008_title.yml
   - include:
       file: classpath:/db/changelog/009_user_profile.yml
+  - include:
+      file: classpath:/db/changelog/010_role.yml
+  - include:
+      file: classpath:/db/changelog/011_user.yml
+  - include:
+      file: classpath:/db/changelog/012_user_role.yml
