Hospitals related changes.
Signed-off-by: Chinthaka Manathunga <Chinthaka.Manathunga@lseg.com>

--- a/src/main/resources/db/changelog/015_hospital.yml
+++ b/src/main/resources/db/changelog/015_hospital.yml
@@ -74,3 +74,14 @@ databaseChangeLog:
               - column:
                   name: version
                   type: int
+
+  - changeSet:
+      id: 2
+      author: ChinthakaMa
+      changes:
+        - addAutoIncrement:
+            columnName: id
+            generationType: ALWAYS
+            tableName: hospital
+            columnDataType: int
+
