Doctor and Doctor Speciality
Signed-off-by: Chinthaka Manathunga <Chinthaka.Manathunga@lseg.com>

--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -29,3 +29,7 @@ databaseChangeLog:
       file: classpath:/db/changelog/014_city.yml
   - include:
       file: classpath:/db/changelog/015_hospital.yml
+  - include:
+      file: classpath:/db/changelog/016_doctor.yml
+  - include:
+      file: classpath:/db/changelog/017_doctor_speciality.yml
