--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
             <version>2.9.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.cloud.sql</groupId>
+            <artifactId>mysql-socket-factory-connector-j-8</artifactId>
+            <version>1.16.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
