--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/channelling_db
+    url: jdbc:mysql:///channelling_db?cloudSqlInstance=channelling-lk-418211:us-central1:my-sql-8&socketFactory=com.google.cloud.sql.mysql.SocketFactory
     username: channelling
     password: channelling123
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+
 
 
   liquibase:
@@ -13,7 +15,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
   security:
     user:
