--- a/src/main/resources/db/changelog/023_appointment.yml
+++ b/src/main/resources/db/changelog/023_appointment.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: ChinthakaMa
       changes:
         - createTable:
-            tableName: doctor_sessions
+            tableName: appointment
             columns:
               - column:
                   name: id
@@ -13,29 +13,28 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
-                    primaryKeyName: pk_doctor_sessions
+                    primaryKeyName: pk_appointment
               - column:
-                  name: doctor_id
+                  name: appointment_status
+                  type: varchar(50)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: patient_id
                   type: int
                   constraints:
                     nullable: false
-                    foreignKeyName: fk_doctor_sessions_doctor
+                    foreignKeyName: fk_appointment_patient
                     referencedColumnNames: id
-                    referencedTableName: doctor
+                    referencedTableName: patient
               - column:
-                  name: hospital_id
+                  name: session_id
                   type: int
                   constraints:
                     nullable: false
-                    foreignKeyName: fk_doctor_sessions_hospital
+                    foreignKeyName: fk_appointment_session
                     referencedColumnNames: id
-                    referencedTableName: hospital
-              - column:
-                  name: session_date_time
-                  type: date
-              - column:
-                  name: max_patients
-                  type: int
+                    referencedTableName: doctor_sessions
               - column:
                   name: status
                   type: varchar(15)
@@ -62,15 +61,3 @@ databaseChangeLog:
               - column:
                   name: version
                   type: int
-  - changeSet:
-      id: 2
-      author: ChinthakaMa
-      changes:
-        - addColumn:
-            tableName: doctor_sessions
-            columns:
-              - column:
-                  name: total_fee
-                  type: decimal(16,4)
-
-
