--- a/src/main/resources/db/changelog/025_hospital_fees.yml
+++ b/src/main/resources/db/changelog/025_hospital_fees.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: ChinthakaMa
       changes:
         - createTable:
-            tableName: doctor_sessions
+            tableName: hospital_fees
             columns:
               - column:
                   name: id
@@ -13,29 +13,37 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
-                    primaryKeyName: pk_doctor_sessions
+                    primaryKeyName: pk_hospital_fees
               - column:
-                  name: doctor_id
-                  type: int
+                  name: amount
+                  type: decimal(16,4)
                   constraints:
                     nullable: false
-                    foreignKeyName: fk_doctor_sessions_doctor
-                    referencedColumnNames: id
-                    referencedTableName: doctor
               - column:
                   name: hospital_id
                   type: int
                   constraints:
                     nullable: false
-                    foreignKeyName: fk_doctor_sessions_hospital
+                    foreignKeyName: fk_hospital_fees_hospital
                     referencedColumnNames: id
                     referencedTableName: hospital
               - column:
-                  name: session_date_time
-                  type: date
-              - column:
-                  name: max_patients
+                  name: transaction_id
                   type: int
+                  constraints:
+                    nullable: false
+                    foreignKeyName: fk_hospital_fees_transaction_type
+                    referencedColumnNames: id
+                    referencedTableName: transaction_type
+              - column:
+                  name: effective_from
+                  type: datetime
+                  defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: effective_to
+                  type: datetime
               - column:
                   name: status
                   type: varchar(15)
@@ -62,15 +70,3 @@ databaseChangeLog:
               - column:
                   name: version
                   type: int
-  - changeSet:
-      id: 2
-      author: ChinthakaMa
-      changes:
-        - addColumn:
-            tableName: doctor_sessions
-            columns:
-              - column:
-                  name: total_fee
-                  type: decimal(16,4)
-
-
