--- a/src/main/resources/db/changelog/027_payments.yml
+++ b/src/main/resources/db/changelog/027_payments.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: ChinthakaMa
       changes:
         - createTable:
-            tableName: doctor_sessions
+            tableName: payment
             columns:
               - column:
                   name: id
@@ -13,29 +13,26 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
-                    primaryKeyName: pk_doctor_sessions
+                    primaryKeyName: pk_payment
               - column:
-                  name: doctor_id
+                  name: appointment_id
                   type: int
                   constraints:
                     nullable: false
-                    foreignKeyName: fk_doctor_sessions_doctor
+                    foreignKeyName: fk_payment_appointment
                     referencedColumnNames: id
-                    referencedTableName: doctor
+                    referencedTableName: appointment
               - column:
-                  name: hospital_id
-                  type: int
-                  constraints:
-                    nullable: false
-                    foreignKeyName: fk_doctor_sessions_hospital
-                    referencedColumnNames: id
-                    referencedTableName: hospital
-              - column:
-                  name: session_date_time
+                  name: payment_date
                   type: date
+                  constraints:
+                    nullable: false
               - column:
-                  name: max_patients
-                  type: int
+                  name: amount
+                  type: decimal(16,4)
+              - column:
+                  name: payment_method
+                  type: varchar(20)
               - column:
                   name: status
                   type: varchar(15)
@@ -62,15 +59,3 @@ databaseChangeLog:
               - column:
                   name: version
                   type: int
-  - changeSet:
-      id: 2
-      author: ChinthakaMa
-      changes:
-        - addColumn:
-            tableName: doctor_sessions
-            columns:
-              - column:
-                  name: total_fee
-                  type: decimal(16,4)
-
-
