--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,20 +1,5 @@
-on:
-  schedule:
-    # Runs every day At 01:00.
-    - cron:  '0 1 * * *'
-jobs:
-  zap_scan:
-    runs-on: ubuntu-latest
-    name: Scan ZAP website
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: master
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.3.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'https://www.zaproxy.org/'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+steps:
+  - name: ZAP Scan
+    uses: zaproxy/action-full-scan@v0.10.0
+    with:
+      target: 'https://www.zaproxy.org/'
