--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,5 +1,11 @@
-steps:
-  - name: ZAP Scan
-    uses: zaproxy/action-full-scan@v0.10.0
-    with:
-      target: 'https://www.zaproxy.org/'
+on: [push]
+
+jobs:
+  zap_scan:
+    runs-on: ubuntu-latest
+    name: Scan the web application
+    steps:
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.10.0
+        with:
+          target: 'https://www.zaproxy.org/'
