--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://${ENV_IP}:${ENV_PORT}/${DB}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    #url: jdbc:mysql://${ENV_IP}:${ENV_PORT}/${DB}
+    # username: ${DB_USER}
+    # password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://SG-channelling-db-8928-mysql-master.servers.mongodirector.com:3306/channelling_db
+    username: sgroot
+    password: hZSAVc2l7Kq40.kG
 
 
   liquibase:
@@ -18,7 +21,8 @@ spring:
   security:
     user:
       name: user
-      password: ${SECURITY_PASSWORD}
+      #password: ${SECURITY_PASSWORD}
+      password: user123
     filter:
       order: 10
 
